[package]
name = "sdv-volcano"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = { version = "1.6.3", default-features = false }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "ImageData", "HtmlImageElement", "console"] }

[build-dependencies]
png = "0.17.13"
tiled = "0.11.2"
